--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_minimum_required (VERSION 3.5)
 project (yocto-gl)
 
 option(YOCTO_OPENGL "Build OpenGL apps" ON)
+option(YOCTO_GLTFJSON "Build with YGL_GLTFJSON" OFF)
+option(YOCTO_IMAGEIO "Build with YGL_IMAGEIO" ON)
+option(YOCTO_TEST_SCENES "Build with YGL_TEST_SCENES" ON)
 option(YOCTO_EXPERIMENTAL "Build experimental apps" OFF)
 
 set(CMAKE_CXX_STANDARD 14)
@@ -37,6 +40,18 @@ else(YOCTO_GLTFJSON)
     add_definitions(-DYGL_GLTFJSON=0)
 endif(YOCTO_GLTFJSON)
 
+if(YOCTO_IMAGEIO)
+    add_definitions(-DYGL_IMAGEIO=1)
+else(YOCTO_IMAGEIO)
+    add_definitions(-DYGL_IMAGEIO=0)
+endif(YOCTO_IMAGEIO)
+
+if(YOCTO_TEST_SCENES)
+    add_definitions(-DYGL_TEST_SCENES=1)
+else(YOCTO_TEST_SCENES)
+    add_definitions(-DYGL_TEST_SCENES=0)
+endif(YOCTO_TEST_SCENES)
+
 if(YOCTO_OPENGL)
     find_package(OpenGL REQUIRED)
     if(APPLE)
@@ -66,15 +81,21 @@ if(UNIX AND NOT APPLE)
     target_link_libraries(yocto_gl Threads::Threads)
 endif(UNIX AND NOT APPLE)
 
-add_executable(ytestgen apps/ytestgen.cpp yocto/yocto_gl.h)
-add_executable(ytrace apps/ytrace.cpp yocto/yocto_gl.h)
 add_executable(yscnproc apps/yscnproc.cpp yocto/yocto_gl.h)
-add_executable(yimproc apps/yimproc.cpp yocto/yocto_gl.h)
 
-target_link_libraries(ytestgen yocto_gl)
-target_link_libraries(ytrace yocto_gl)
+if (YOCTO_TEST_SCENES)
+    add_executable(ytestgen apps/ytestgen.cpp yocto/yocto_gl.h)
+    target_link_libraries(ytestgen yocto_gl)
+endif()
+
+if (YOCTO_IMAGEIO)
+    add_executable(yimproc apps/yimproc.cpp yocto/yocto_gl.h)
+    add_executable(ytrace apps/ytrace.cpp yocto/yocto_gl.h)
+    target_link_libraries(yimproc yocto_gl)
+    target_link_libraries(ytrace yocto_gl)
+endif()
+
 target_link_libraries(yscnproc yocto_gl)
-target_link_libraries(yimproc yocto_gl)
 
 if(YOCTO_OPENGL)
     add_executable(yview apps/yview.cpp yocto/yocto_gl.h)
