--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,8 @@ else(YOCTO_OPENGL)
     add_library(yocto_gl yocto/yocto_gl.h yocto/yocto_gl.cpp yocto/ext/stb_image.cpp yocto/ext/nanosvg.cpp)
 endif(YOCTO_OPENGL)
 
+add_library(yocto_gltf yocto/yocto_gltf.cpp)
+
 if(UNIX AND NOT APPLE)
     find_package(Threads REQUIRED)
     target_link_libraries(yocto_gl Threads::Threads)
@@ -100,11 +102,11 @@ target_link_libraries(yscnproc yocto_gl)
 if(YOCTO_OPENGL)
     add_executable(yview apps/yview.cpp)
     add_executable(yitrace apps/yitrace.cpp)
-    add_executable(ygltfview apps/ygltfview.cpp yocto/yocto_gltf.cpp)
+    add_executable(ygltfview apps/ygltfview.cpp)
     add_executable(yimview apps/yimview.cpp)
 
     target_link_libraries(yview yocto_gl)
     target_link_libraries(yitrace yocto_gl)
-    target_link_libraries(ygltfview yocto_gl)
+    target_link_libraries(ygltfview yocto_gl yocto_gltf)
     target_link_libraries(yimview yocto_gl)
 endif(YOCTO_OPENGL)
